--- a/index.html
+++ b/index.html
@@ -137,8 +137,11 @@
 
     </footer>
 
-    <script src="js/js.js"></script>
+    <script src="js/menuHambur.js"></script>
+    <script src="js/modoOscuro.js"></script>
+    <script src="js/carrito.js"></script>
     <script src="js/productos-index.js"></script>
+
 </body>
 
 </html>
