--- a/pages/login.html
+++ b/pages/login.html
@@ -114,8 +114,8 @@
 
     </footer>
 
-    <script src="../js/js.js"></script>
-    <script src="../js/product.js"></script>
+    <script src="../js/menuHambur.js"></script>
+    <script src="../js/modoOscuro.js"></script>
 </body>
 
 </html>
