--- a/pages/producto.html
+++ b/pages/producto.html
@@ -103,7 +103,8 @@
 
     </footer>
 
-    <script src="../js/js.js"></script>
+    <script src="../js/menuHambur.js"></script>
+    <script src="../js/modoOscuro.js"></script>
     <script src="../js/product.js"></script>
 </body>
 
