--- a/pages/register.html
+++ b/pages/register.html
@@ -90,8 +90,6 @@
                             </div>
                         </div>
 
-
-
                         <div class="form__container">
                             <div class="form__container-top">
                                 <label for="apellido" class="form__label">Apellido:</label>
@@ -105,9 +103,7 @@
                                 <label for="edad" class="form__label">Fecha de Nacimiento:</label>
                                 <input class="form__input" type="date" id="edad" name="edad">
                             </div>
-
                         </div>
-
 
                         <div class="form__container--genero">
                             <label for="edad" class="form__label">Género:</label>
@@ -123,12 +119,7 @@
                                     <label class="form__input--genero" for="mujer">Mujer</label>
                                 </div>
                             </div>
-
-
-
-
                         </div>
-
                     </div>
 
                     <div class="form__container--tipo-comprador">
@@ -138,8 +129,6 @@
                             <option value="mayorista">Mayorista</option>
                             <option value="minorista">Minorista</option>
                         </select>
-
-
                     </div>
                     </div>
 
@@ -151,10 +140,15 @@
                                 <input class="form__input" type="email" id="email" name="email"
                                     placeholder="Tu email...">
                             </div>
-
                         </div>
 
-
+                        <div class="form__container">
+                            <div class="form__container-top">
+                                <label for="password" class="form__label">Contraseña:</label>
+                                <input class="form__input" type="password" id="password" name="password"
+                                    placeholder="Tu Contraseña...">
+                            </div>
+                        </div>
 
                         <div class="form__container">
                             <div class="form__container-top">
@@ -162,9 +156,7 @@
                                 <input class="form__input" type="tel" id="telefono" name="telefono"
                                     placeholder="Tu teléfono...">
                             </div>
-
                         </div>
-
 
                         <div class="form__container">
                             <div class="form__container-top">
